tests/baselines/reference/callWithWrongNumberOfTypeArguments.errors.txt
tests/cases/compiler/callWithWrongNumberOfTypeArguments.ts(5,3): error TS2558: Expected 2 type arguments, but got 3.


==== tests/cases/compiler/callWithWrongNumberOfTypeArguments.ts (1 errors) ====
    function f<T, U>() { }
    
    f<number>();
    f<number, string>();
    f<number, string, number>();
      ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2558: Expected 2 type arguments, but got 3.